# agentloss

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.obsidian/: workspace.json
agentaudit/: __init__.py
agentloss/: __init__.py  backfill.py  cli.py  core.py  doctor.py  gateway.py  gateway_http.py  gateway_init.py  importer.py  inference.py  llm_verifier.py  metrics.py  persist.py  report.py  report_html.py  sampler.py  spans.py  stability.py  submission.py  underwriting.py  webhook.py
agentloss/connectors/: README.md  braintrust.py  langfuse.py  phoenix.py
agentloss/detectors/: __init__.py  erp.py  reasoning.py  stripe.py
agentloss/packs/: __init__.py  stripe.py  tools.py
agentproof/: calibration.py  core.py  metrics.py  sampler.py  verifier.py
docs/: AISURE.md  DETECTORS.md  GATEWAY.md  OUTCOMES.md  PACKS.md  SDK-SPEC.md  SUPPORT-CONCESSION.md
dogfood/: README.md  agent.py  config.py  erp.py  eval.py  llm.py  outcomes.py  requirements.txt  run.py  seeder.py
dogfood/adapters/: erp_sim.yaml
dogfood/packs/ap/: pack.yaml
examples/: backfill_eval.py  calibration_eval.py  connectors_offline_test.py  erp_detector_eval.py  from_spans.py  gateway_eval.py  gateway_http_eval.py  gateway_init_eval.py  gateway_init_http_eval.py  import_eval.py  payment_pack.py  phoenix_emit_spans.py  phoenix_live.py  phoenix_offline_test.py  reasoning_detector_eval.py  sor_ladder_eval.py  stability_eval.py  stripe_detector_eval.py  stripe_pack_test.py  tools_pack_test.py  underwriting_eval.py  verifier_offline_test.py  webhook_eval.py
examples/gateway/: mock_reasoner.py  mock_sor_http_server.py  mock_sor_server.py  payments.manifest.json  sor_ladder_server.py
manifests/: README.md  stripe-mcp.manifest.json
mcp/: agentaudit_mcp.py  agentloss_mcp.py  agentproof_mcp.py  ailoss_mcp.py
site/: .gitignore  .vercelignore  README.md  build.sh  copy.js  deploy.sh  index.html  package.json  robots.txt  sitemap.xml  styles.css  vercel.json
skills/instrument-agent-reliability/: SKILL.md
tests/: conftest.py  test_backfill.py  test_core.py  test_doctor.py  test_evals.py  test_gateway.py  test_gateway_http.py  test_gateway_init.py  test_importer.py  test_inference.py  test_packs.py  test_persist.py  test_webhook.py
