[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentaudit"
version = "0.0.1"
description = "OpenTelemetry-native reliability + dollar-impact instrumentation for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
    "ai-agents", "agent-observability", "llm", "reliability", "evals",
    "opentelemetry", "openinference", "ground-truth",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Development Status :: 3 - Alpha",
]
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]

[tool.setuptools]
packages = ["agentaudit"]
