[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentloss"
version = "0.0.1"
description = "Measure the real-world error rate and dollar cost of an AI agent's decisions. OpenTelemetry-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
    "ai-agents", "agent-evals", "production-evals", "llm", "reliability",
    "error-rate", "cost-of-errors", "dollar-loss", "ground-truth", "outcomes",
    "opentelemetry", "openinference", "agent-observability",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Development Status :: 3 - Alpha",
]
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://admt.ai"
Repository = "https://github.com/ADMT-ai/agentloss"

[tool.setuptools]
packages = ["agentloss"]
