[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentloss"
version = "0.0.14"
description = "Measure the real-world error rate and dollar cost of an AI agent's decisions. OpenTelemetry-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
    "ai-agents", "agent-evals", "production-evals", "llm", "reliability",
    "error-rate", "cost-of-errors", "dollar-loss", "ground-truth", "outcomes",
    "opentelemetry", "openinference", "agent-observability",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Development Status :: 3 - Alpha",
]
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
mcp = ["mcp>=1.0"]
phoenix = ["arize-phoenix-client>=1.0", "pandas>=2.0"]
langfuse = ["langfuse>=2.0"]
braintrust = ["braintrust>=0.0.1"]
stripe = ["stripe>=7.0"]

[project.scripts]
agentloss = "agentloss.cli:main"

[project.urls]
Homepage = "https://agentloss.com"
Repository = "https://github.com/ADMT-ai/agentloss"
Organization = "https://admt.ai"

[tool.setuptools.packages.find]
include = ["agentloss*"]
